scripts/nodejs/deployment-with-traefik.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs-front
  template:
    metadata:
      labels:
        app: nodejs-front
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
      - name: nodejs-front
        image: linuscontainerregistry2.azurecr.io/btc:1.0.0
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 1024Mi
        ports:
          - name: web
            containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: nodejs-front
spec:
  ports:
    - name: web
      port: 3000
      targetPort: web
  selector:
    app: nodejs-front
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nodejs-front
                port: 
                  name: web
